--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
-    "sweetalert2": "^11.7.0"
+    "express": "^4.18.2",
+    "sweetalert2": "^11.7.0",
+    "dotenv": "^16.0.3"
   }
 }
