--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
+    "axios": "^1.2.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "sweetalert2": "^11.7.0",
-    "dotenv": "^16.0.3"
+    "sweetalert2": "^11.7.0"
   }
 }
