--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
+    "@netlify/functions": "^1.4.0",
     "axios": "^1.2.3",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "sweetalert2": "^11.7.0"
   }
