--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.2.3",
     "express": "^4.18.2",
+    "node-fetch": "^3.3.0",
     "sweetalert2": "^11.7.0"
   }
 }
